library/pod-security-policy/host-probes-lifecycle/samples/psp-host-probes-lifecycle/example_allowed_no_probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-no-probes-allowed
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
