library/pod-security-policy/host-probes-lifecycle/samples/psp-host-probes-lifecycle/example_allowed_probe_no_host.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-probe-no-host-allowed
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    livenessProbe:
      httpGet:
        path: /
        port: 80
