library/pod-security-policy/host-probes-lifecycle/samples/psp-host-probes-lifecycle/example_disallowed_lifecycle_prestop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lifecycle-prestop-host-disallowed
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    lifecycle:
      preStop:
        httpGet:
          path: /
          port: 80
          host: 127.0.0.1
