library/pod-security-policy/host-probes-lifecycle/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostprobeslifecycle
  annotations:
    metadata.gatekeeper.sh/title: "Host Probes and Lifecycle Hooks"
    metadata.gatekeeper.sh/version: 1.0.2
    metadata.gatekeeper.sh/bundle: "pod-security-baseline, pod-security-restricted"
    description: >-
      Disallows specifying the host field in probes and lifecycle hooks.
      The Baseline profile (v1.34+) requires that probes (livenessProbe,
      readinessProbe, startupProbe) and lifecycle hooks (postStart, preStop)
      must not specify a host field. This prevents containers from executing
      network requests to the host node.
      For more information, see
      https://kubernetes.io/docs/concepts/security/pod-security-standards/
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostProbesLifecycle
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Disallows specifying the host field in probes and lifecycle hooks.
            The Baseline profile (v1.34+) requires that probes (livenessProbe,
            readinessProbe, startupProbe) and lifecycle hooks (postStart, preStop)
            must not specify a host field. This prevents containers from executing
            network requests to the host node.
            For more information, see
            https://kubernetes.io/docs/concepts/security/pod-security-standards/
          properties:
            exemptImages:
              description: >-
                Any container that uses an image that matches an entry in this list will be excluded
                from enforcement. Prefix-matching can be signified with `*`. For example: `my-image-*`.

                It is recommended that users use the fully-qualified Docker image name (e.g. start with a domain name)
                in order to avoid unexpectedly exempting images from an untrusted repository.
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
      - engine: K8sNativeValidation
        source:
          variables:
          - name: containers
            expression: 'has(variables.anyObject.spec.containers) ? variables.anyObject.spec.containers : []'
          - name: initContainers
            expression: 'has(variables.anyObject.spec.initContainers) ? variables.anyObject.spec.initContainers : []'
          - name: ephemeralContainers
            expression: 'has(variables.anyObject.spec.ephemeralContainers) ? variables.anyObject.spec.ephemeralContainers : []'
          - name: exemptImagePrefixes
            expression: |
              !has(variables.params.exemptImages) ? [] :
                variables.params.exemptImages.filter(image, image.endsWith("*")).map(image, string(image).replace("*", ""))
          - name: exemptImageExplicit
            expression: |
              !has(variables.params.exemptImages) ? [] : 
                variables.params.exemptImages.filter(image, !image.endsWith("*"))
          - name: exemptImages
            expression: |
              (variables.containers + variables.initContainers + variables.ephemeralContainers).filter(container,
                container.image in variables.exemptImageExplicit ||
                variables.exemptImagePrefixes.exists(exemption, string(container.image).startsWith(exemption))
              ).map(container, container.image)
          - name: allContainers
            expression: 'variables.containers + variables.initContainers + variables.ephemeralContainers'
          - name: badProbeContainers
            expression: |
              variables.allContainers.filter(container,
                !(container.image in variables.exemptImages) &&
                (
                  (has(container.livenessProbe) && has(container.livenessProbe.httpGet) && has(container.livenessProbe.httpGet.host) && container.livenessProbe.httpGet.host != "") ||
                  (has(container.livenessProbe) && has(container.livenessProbe.tcpSocket) && has(container.livenessProbe.tcpSocket.host) && container.livenessProbe.tcpSocket.host != "") ||
                  (has(container.readinessProbe) && has(container.readinessProbe.httpGet) && has(container.readinessProbe.httpGet.host) && container.readinessProbe.httpGet.host != "") ||
                  (has(container.readinessProbe) && has(container.readinessProbe.tcpSocket) && has(container.readinessProbe.tcpSocket.host) && container.readinessProbe.tcpSocket.host != "") ||
                  (has(container.startupProbe) && has(container.startupProbe.httpGet) && has(container.startupProbe.httpGet.host) && container.startupProbe.httpGet.host != "") ||
                  (has(container.startupProbe) && has(container.startupProbe.tcpSocket) && has(container.startupProbe.tcpSocket.host) && container.startupProbe.tcpSocket.host != "")
                )
              ).map(container, "Container " + container.name + " has probe with host field set")
          - name: badLifecycleContainers
            expression: |
              variables.allContainers.filter(container,
                !(container.image in variables.exemptImages) &&
                (
                  (has(container.lifecycle) && has(container.lifecycle.postStart) && has(container.lifecycle.postStart.httpGet) && has(container.lifecycle.postStart.httpGet.host) && container.lifecycle.postStart.httpGet.host != "") ||
                  (has(container.lifecycle) && has(container.lifecycle.postStart) && has(container.lifecycle.postStart.tcpSocket) && has(container.lifecycle.postStart.tcpSocket.host) && container.lifecycle.postStart.tcpSocket.host != "") ||
                  (has(container.lifecycle) && has(container.lifecycle.preStop) && has(container.lifecycle.preStop.httpGet) && has(container.lifecycle.preStop.httpGet.host) && container.lifecycle.preStop.httpGet.host != "") ||
                  (has(container.lifecycle) && has(container.lifecycle.preStop) && has(container.lifecycle.preStop.tcpSocket) && has(container.lifecycle.preStop.tcpSocket.host) && container.lifecycle.preStop.tcpSocket.host != "")
                )
              ).map(container, "Container " + container.name + " has lifecycle hook with host field set")
          - name: isUpdate
            expression: has(request.operation) && request.operation == "UPDATE"
          validations:
          - expression: variables.isUpdate || size(variables.badProbeContainers) == 0
            messageExpression: 'variables.badProbeContainers.join(", ")'
          - expression: variables.isUpdate || size(variables.badLifecycleContainers) == 0
            messageExpression: 'variables.badLifecycleContainers.join(", ")'
      - engine: Rego
        source:
          rego: |
            package k8spsphostprobeslifecycle

            import future.keywords.contains
            import future.keywords.if

            import data.lib.exclude_update.is_update
            import data.lib.exempt_container.is_exempt

            violation contains {"msg": msg, "details": {}} if {
                not is_update(input.review)

                c := input_containers[_]
                not is_exempt(c)
                probe := get_probe(c)
                probe.httpGet.host != ""
                msg := sprintf("Container %v has probe with host field set: %v", [c.name, probe.httpGet.host])
            }

            violation contains {"msg": msg, "details": {}} if {
                not is_update(input.review)

                c := input_containers[_]
                not is_exempt(c)
                probe := get_probe(c)
                probe.tcpSocket.host != ""
                msg := sprintf("Container %v has probe with host field set: %v", [c.name, probe.tcpSocket.host])
            }

            violation contains {"msg": msg, "details": {}} if {
                not is_update(input.review)

                c := input_containers[_]
                not is_exempt(c)
                hook := get_lifecycle_hook(c)
                hook.httpGet.host != ""
                msg := sprintf("Container %v has lifecycle hook with host field set: %v", [c.name, hook.httpGet.host])
            }

            violation contains {"msg": msg, "details": {}} if {
                not is_update(input.review)

                c := input_containers[_]
                not is_exempt(c)
                hook := get_lifecycle_hook(c)
                hook.tcpSocket.host != ""
                msg := sprintf("Container %v has lifecycle hook with host field set: %v", [c.name, hook.tcpSocket.host])
            }

            get_probe(c) := probe if {
                probe := c.livenessProbe
            }

            get_probe(c) := probe if {
                probe := c.readinessProbe
            }

            get_probe(c) := probe if {
                probe := c.startupProbe
            }

            get_lifecycle_hook(c) := hook if {
                hook := c.lifecycle.postStart
            }

            get_lifecycle_hook(c) := hook if {
                hook := c.lifecycle.preStop
            }

            input_containers contains c if {
                c := input.review.object.spec.containers[_]
            }

            input_containers contains c if {
                c := input.review.object.spec.initContainers[_]
            }

            input_containers contains c if {
                c := input.review.object.spec.ephemeralContainers[_]
            }
          libs:
            - |
              package lib.exclude_update

              import future.keywords.contains
              import future.keywords.if

              is_update(review) if {
                  review.operation == "UPDATE"
              }
            - |
              package lib.exempt_container

              import future.keywords.contains
              import future.keywords.if

              is_exempt(container) if {
                  exempt_images := object.get(object.get(input, "parameters", {}), "exemptImages", [])
                  img := container.image
                  exemption := exempt_images[_]
                  _matches_exemption(img, exemption)
              }

              _matches_exemption(img, exemption) if {
                  not endswith(exemption, "*")
                  exemption == img
              }

              _matches_exemption(img, exemption) if {
                  endswith(exemption, "*")
                  prefix := trim_suffix(exemption, "*")
                  startswith(img, prefix)
              }
